fixed layout issues

--- a/src/assets/styles/pages/student-detail.less
+++ b/src/assets/styles/pages/student-detail.less
@@ -110,12 +110,19 @@
                             td:last-child {
                               border-left: 1px solid @color-gray-dark;
                             }
+                            td{
+                                border-color: @color-gray-dark;
+                            }
                           }
-                        
+                        tbody{
+                            tr:nth-child(even){
+                                background: transparent;
+                            }
+                        }
                     }
                 }
             }
         }
     }
-
+    
 }
